2006-04-12  Eric Blake  <ebb9@byu.net>

	* tests/autotest.at (Debugging a failed test): Fix comment.

2006-04-12  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sh.m4 (_AS_LN_S_PREPARE): Simplify the summary of
	all the changes since 2006-04-07.

2006-04-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/m4sugar/m4sh.m4 (_AS_LN_S_PREPARE): If `ln -s file1 file2'
	succeeded, but `ln -s file dir' failed, take care to remove the
	leftover target before the next test, to prevent its spurious
	failure; also make sure `ln file dir' works before selecting it.
	Thanks to Keith Marshall for pointing this out.
	* THANKS: Update.

	* lib/autotest/general.m4 (AT_INIT): Store quoted variable
	assignments in `at_debug_args', so that we put them correctly
	in the `run' script.
	* tests/autotest.at (Debugging a failed test): Unmark XFAIL.
	Reported by Eric Blake.

2006-04-11  Eric Blake  <ebb9@byu.net>

	* tests/autotest.at (AT_CHECK_AT): Add new argument, to allow
	top-level tests after micro-suite has been run.   Used in...
	(Debugging a successful test, Debugging script and environment),
	(Debugging a failed test): ...these new tests.  The first of these
	is fixed by...
	* lib/autotest/general.m4 (_AT_CREATE_DEBUGGING_SCRIPT): New
	macro, split out from...
	(AT_INIT): ...here, so that using -d also generates a run script.
	Document that -d inhibits top-level logging.
	* doc/autoconf.texi (testsuite Invocation): Document that -d only
	inhibits top-level logging; debug scripts are created.

	* lib/autotest/general.m4 (_AT_CHECK): Avoid syntax error on empty
	check.
	* tests/autotest.at (Empty test, Empty check): New test to check it.

	* lib/autoconf/c.m4 (AC_C_CONST, AC_C_VOLATILE): Avoid warnings
	from gcc.

2006-04-10  Stepan Kasal  <kasal@ucw.cz>

	* tests/mktests.sh: Use "trap '' 0", not "trap 0".  Do not touch
	the files if a problem appears.  Make the empty *.at files
	read-only, too.  Proposed by Ralf Wildenhues.

2006-04-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
